--- a/.github/workflows/self-push-amd.yml
+++ b/.github/workflows/self-push-amd.yml
@@ -254,7 +254,7 @@ jobs:
       matrix:
         folders: ${{ fromJson(needs.setup.outputs.matrix) }}
         machine_type: [ multi-gpu ]
-    runs-on: [ self-hosted, docker-gpu, amd-gpu, '${{ matrix.machine_type }}' ]
+    runs-on: [ self-hosted, docker-gpu, amd-gpu, mi210, '${{ matrix.machine_type }}' ]
     container:
       image: transformers-pytorch-amd-gpu-push-ci
       options: --device /dev/kfd "$(./get_gpu.sh)" --shm-size "16gb" --ipc host -v /mnt/cache/.cache/huggingface:/mnt/cache/
